--- a/Sorteio/app/src/main/res/values/strings.xml
+++ b/Sorteio/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Sorteio</string>
+    <string name="numero_sorteado">Número Sorteado: </string>
+    <string name="nova_string">Valor da nova string</string>
+
 </resources>
